--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
 .list{
 	border: 1px solid grey;
 }
+
+.validation-error{
+	border: 2px solid red;
+}
+
+.validation-error-text{
+	display: none;
+	color: red
+}
